# backend-system

./: .dockerignore  CMakeLists.txt  Chart.yaml  Dockerfile  LICENSE  README.md  alert_rules.yml  backend.conf  backend.service  setup.py
.GitHub/workflows/: ci.yml
.github/workflows/: ci.yml
base/: BaseBackend.cpp  BaseBackend.h  CMakeLists.txt  Consumer.cpp  Consumer.h  Producer.cpp  Producer.h  Queue.cpp  Queue.h
bindings/: bindings.cpp
grafana/: alert_rules.yml  grafana_dashboard.json
helm/backend-chart/: Chart.yaml  values.yaml
helm/backend-chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
metrics/: prometheus.yml
python/backend_module/: app.py  backend_wrapper.py  main.py  prometheus_metrics.py
supervisor/: backend.conf
supervisord/: backend.conf
systemd/: backend.service
